tests/fixtures/batch-collections/invalid-files/missing-method.bru
meta {
  name: Missing Method
  type: http
  seq: 2
}

url: https://api.example.com/invalid
